--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
       "workerd"
     ],
     "onlyBuiltDependencies": [
-      "better-sqlite3"
+      "better-sqlite3",
+      "unrs-resolver"
     ]
   }
 }
